remove dependency to com.sun.org.apache.xml.internal.security.utils.Base64